2012-02-01 Jérôme Pasquier  <rainbru@free.fr>

	* src/common/Makefile.am (h_sources, cc_sources): Handles CamelCased
	files and new header names.
	* src/common/curlaccountdelete.h|.cpp: CamelCased and header
	called hpp.
	* src/common/curlaccountconfirmmail.h|.cpp: CamelCased and
	header called hpp.
	* src/common/curlaccountadd.h|.cpp: CamelCased and header called hpp.
	* src/common/clientconnect.h|.cpp: CamelCased and header called hpp.
	* src/common/chartserie.h|.cpp: CamelCased and header called hpp.
	* src/common/chartline.h|.cpp: CamelCased and header called hpp.
	* src/common/chartbase.h|.cpp: CamelCased and header called hpp.

2012-01-22 Jérôme Pasquier  <rainbru@free.fr>

	* Makefile.am (EXTRA_DIST): Add manpages to make the distribution
	finally complete.

	* src/client/Makefile.am (rainbrurpg_HEADERS=): Added all headers files
	(missing in the arcive).

	* m4/: Add Makefile.am to fix missing rb_uml.m4 file.

	* stc/testHelpers/Makefile.am (RenderSystem_Dummy_la_HEADERS): Add
	missing file DummyRenderSystem.hpp.
	* src/common/Makefile.am (h_sources): Add missing files singleton.h,
	tnotelist.h, tidentreturn.h, ftpdef.h to archive.

2012-01-21 Jérôme Pasquier  <rainbru@free.fr>

	* po/POTFILES.in: CamelCase(d) and header .hpp(ed) interdep/ filenames.

	* src/interdep/inputmanager.*: CamelCase(d) and header .hpp(ed).
	* src/interdep/gamestate.*: CamelCase(d) and header .hpp(ed).

2012-01-20 Jérôme Pasquier  <rainbru@free.fr>

	* src/interdep/gameengine.*: CamelCase(d) and header .hpp(ed).

	* src/client/main.cpp (main): Handles plusings-win.cfg.
	* config/plugins-win32.cfg: created with .dll extensions.

	* po/POTFILES.in: Fix the interdep creation related erros
	due to move gameengine.cpp gamestate.cpp inputmanager.cpp
	from src/maincore/ to src/interdep/.

	* config/resources.cfg (General): Comment out the previous
	directories related enties.
	* configure.in (AC_CONFIG_FILES): Remove generation of
	Makefile(s) for previous directories.