@@ -115,6 +115,8 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-215 (21 jan 2012 - ???) SLOC ??? UT ??? FT ???:??
+- (3) CamelCased some files in common/
+   CurlAccountToggleBlacklist, CurlFileToXml, CurlGetFile
 - (2) CamelCased some files in common/
    ChartBase, ChartLine, ChartSerie, ClientConnect, CurlAccountAdd
    CurlAccountConfirmMail, CurlAccountDelete
